versioned_docs/version-0.10/cloud/secrets.mdx
---
title: Okteto Secrets
description: Okteto Secrets allows you to save application configuration in Okteto Cloud, and automatically inject them during deployment time
sidebar_label: Okteto Secrets
id: secrets
---

import Image from '@theme/Image';

Application configuration should be passed at deployment time, not hardcoded in your code.

Okteto Secrets allows you to save application configuration in Okteto Cloud, and automatically inject it during deployment time.

## Manage Okteto Secrets from the Okteto Cloud UI

You can create and delete your Okteto Secrets from the `Secrets` tab in the `Settings` view of the Okteto Cloud UI:

<p align="center"><Image src="/docs/cloud/images/secrets.png" alt="Secrets in settings" width="650" /></p>

To create a new secret, click on the **Add Secret** button, and provide a name and a value. The value will be masked once the secret is created.

<p align="center"><Image src="/docs/cloud/images/add-secret.png" alt="add a secret" width="450" /></p>

To delete an existing secret, click on the **Delete** button on the right. You'll have to confirm your choice before the secret is deleted. Deleted secrets can't be recovered, so be careful when doing this.

<p align="center"><Image src="/docs/cloud/images/delete-secret.png" alt="delete a secret" width="650" /></p>

## Accessing Okteto Secrets from your Okteto Pipeline

Okteto Secrets are automatically injected in your [Okteto Pipeline](/docs/0.10/cloud/okteto-pipeline) as environment variables.

Follow [this tutorial](https://github.com/okteto/pipeline-with-generated-secrets) for a sample using Okteto Secrets in an Okteto Pipeline.
